# Multitarget-tracker

./: .gitignore  Build guide.docx  CMakeLists.txt  VideoExample.cpp  VideoExample.h  args.txt  defines.h  dll_lists_debug.txt  dll_lists_release.txt  lib_lists_debug.txt  lib_lists_release.txt  main.cpp  run-code.py
Detector/: BaseDetector.cpp  CustomSSD.cpp  CustomSSD.h  SSD.cpp  SSD.h  SSDCustomNetDetector.cpp  SSDCustomNetDetector.h  YoloDetector.cpp  common.h  gpu_allocator.h
Tracker/: Kalman.cpp  track.cpp  track.h
data/: urbantracker.names  yolov3-urbantracker.cfg
data/ssd_ids_trained/: Deploy_FarNear.prototxt  Deploy_Near.prototxt  labelmap_Far.prototxt  labelmap_Near.prototxt
doc/: Doxyfile
doc/html/: _background_subtract_8cpp.html  _background_subtract_8cpp__incl.map  _background_subtract_8cpp__incl.md5  _background_subtract_8cpp_source.html  _background_subtract_8h.html  _background_subtract_8h__dep__incl.map  _background_subtract_8h__dep__incl.md5  _background_subtract_8h__incl.map  _background_subtract_8h__incl.md5  _background_subtract_8h_source.html  _background_subtractor_l_b_s_p_8cpp.html  _background_subtractor_l_b_s_p_8cpp.js  _background_subtractor_l_b_s_p_8cpp__incl.map  _background_subtractor_l_b_s_p_8cpp__incl.md5  _background_subtractor_l_b_s_p_8cpp_source.html  _background_subtractor_l_b_s_p_8h.html  _background_subtractor_l_b_s_p_8h__dep__incl.map  _background_subtractor_l_b_s_p_8h__dep__incl.md5  _background_subtractor_l_b_s_p_8h__incl.map  _background_subtractor_l_b_s_p_8h__incl.md5  _background_subtractor_l_b_s_p_8h_source.html  _background_subtractor_l_o_b_s_t_e_r_8cpp.html  _background_subtractor_l_o_b_s_t_e_r_8cpp__incl.map  _background_subtractor_l_o_b_s_t_e_r_8cpp__incl.md5  _background_subtractor_l_o_b_s_t_e_r_8cpp_source.html  _background_subtractor_l_o_b_s_t_e_r_8h.html  _background_subtractor_l_o_b_s_t_e_r_8h.js  _background_subtractor_l_o_b_s_t_e_r_8h__dep__incl.map  _background_subtractor_l_o_b_s_t_e_r_8h__dep__incl.md5  _background_subtractor_l_o_b_s_t_e_r_8h__incl.map  _background_subtractor_l_o_b_s_t_e_r_8h__incl.md5  _background_subtractor_l_o_b_s_t_e_r_8h_source.html  _background_subtractor_su_b_s_e_n_s_e_8cpp.html  _background_subtractor_su_b_s_e_n_s_e_8cpp.js  _background_subtractor_su_b_s_e_n_s_e_8cpp__incl.map  _background_subtractor_su_b_s_e_n_s_e_8cpp__incl.md5  _background_subtractor_su_b_s_e_n_s_e_8cpp_source.html  _background_subtractor_su_b_s_e_n_s_e_8h.html  _background_subtractor_su_b_s_e_n_s_e_8h.js  _background_subtractor_su_b_s_e_n_s_e_8h__dep__incl.map  (+3530 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+143 more)
doc/latex/: _background_subtract_8cpp.tex  _background_subtract_8cpp__incl.md5  _background_subtract_8h.tex  _background_subtract_8h__dep__incl.md5  _background_subtract_8h__incl.md5  _background_subtractor_l_b_s_p_8cpp.tex  _background_subtractor_l_b_s_p_8cpp__incl.md5  _background_subtractor_l_b_s_p_8h.tex  _background_subtractor_l_b_s_p_8h__dep__incl.md5  _background_subtractor_l_b_s_p_8h__incl.md5  _background_subtractor_l_o_b_s_t_e_r_8cpp.tex  _background_subtractor_l_o_b_s_t_e_r_8cpp__incl.md5  _background_subtractor_l_o_b_s_t_e_r_8h.tex  _background_subtractor_l_o_b_s_t_e_r_8h__dep__incl.md5  _background_subtractor_l_o_b_s_t_e_r_8h__incl.md5  _background_subtractor_su_b_s_e_n_s_e_8cpp.tex  _background_subtractor_su_b_s_e_n_s_e_8cpp__incl.md5  _background_subtractor_su_b_s_e_n_s_e_8h.tex  _background_subtractor_su_b_s_e_n_s_e_8h__dep__incl.md5  _background_subtractor_su_b_s_e_n_s_e_8h__incl.md5  _base_detector_8cpp.tex  _base_detector_8cpp__incl.md5  _base_detector_8cpp_a7648f35ed8e9d0160414d8e0eaf99c15_cgraph.md5  _base_detector_8cpp_a7648f35ed8e9d0160414d8e0eaf99c15_icgraph.md5  _base_detector_8h.tex  _base_detector_8h__dep__incl.md5  _base_detector_8h__incl.md5  _ctracker_8cpp.tex  _ctracker_8cpp__incl.md5  _ctracker_8h.tex  _ctracker_8h__dep__incl.md5  _ctracker_8h__incl.md5  _detector_2vibe__src_2_r_e_a_d_m_e_8md.tex  _distance_utils_8h.tex  _distance_utils_8h__dep__incl.md5  _distance_utils_8h__incl.md5  _distance_utils_8h_a07d56fc246495b7670f9d1dceb9cda28_cgraph.md5  _distance_utils_8h_a07d56fc246495b7670f9d1dceb9cda28_icgraph.md5  _distance_utils_8h_a0c9c69badc14ad52f84c924826c8f412_cgraph.md5  _distance_utils_8h_a12621768c13a5dbf03759cbb8838cf82_cgraph.md5  (+1513 more)
